# FL-Lingo

./: .gitignore  FL-Lingo.spec  FLAtlas-Translator.spec  HELP.de.md  HELP.en.md  PROJECT_PLAN.md  fllingo-conv-starter.txt  fllingo_updater.py  launch.py  moddb.md  pyproject.toml  readme.md  run_translator.bat
Languages/: ui.de.json  ui.en.json  ui.es.json  ui.fr.json  ui.ru.json
data/: terminology.de.json  terminology.en.json  terminology.es.json  terminology.fr.json  terminology.nl.json  terminology.sr.json
data/help/: help.de.html  help.en.html
scripts/: build_windows.ps1  crossfire-long-open-entries-exchange.json  install_fllingo_file_association.cmd  translate_exchange_with_gemini.py  translate_exchange_with_google_cloud.py
src/flatlas_translator/: __init__.py  catalog.py  cli.py  dll_plans.py  dll_resources.py  exporters.py  freelancer_ini.py  gui_main.py  localization.py  mod_overrides.py  models.py  path_utils.py  project_io.py  resource_writer.py  stats.py  terminology.py  translation_exchange.py  translation_rules.py  translator_service.py  ui_app.py  ui_builders.py  ui_chrome.py  ui_dialogs.py  ui_editor.py  ui_session.py  ui_state.py  ui_strings.py  ui_themes.py  ui_widgets.py  ui_workflows.py  utf_audio.py
tests/: test_catalog.py  test_dll_plans.py  test_dll_resources.py  test_exporters.py  test_freelancer_ini.py  test_launch.py  test_localization.py  test_mod_overrides.py  test_models.py  test_old_text_lookup.py  test_project_io.py  test_resource_writer.py  test_stats.py  test_terminology.py  test_translation_exchange.py  test_translator_service.py  test_ui_smoke.py
